Change azure repository client affix settings to normal settings.